cli/tests/snapshot/inputs/errors/function_contract_domain_violation.ncl
# capture = 'stderr'
# command = ['eval']

# Regression test for https://github.com/tweag/nickel/issues/1021
let Foo = Number -> Number in ((fun x => x) | Foo) "a"
